The node-XHR lib was removed as a submodule, and needs to be re-added.
Since there is an NPM package for this, that can be used instead of
manually adding the file, and gets installed via `npm install`.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "connect": "2.3.6",
     "jsdom": "0.2.14",
-    "jWorkflow": "0.7.0"
+    "jWorkflow": "0.7.0",
+    "xmlhttprequest": "1.4.2"
   },
   "bundledDependencies": [
     "connect",
